# backup_play_with_tflite

./: .gitmodules  README.md
InferenceHelper/: CMakeLists.txt  InferenceHelper.cpp  InferenceHelper.h  InferenceHelperTensorflowLite.cpp  InferenceHelperTensorflowLite.h
my_project/: CMakeLists.txt  main.cpp
pj_tflite_cls_mobilenet_v2/: Main.cpp
pj_tflite_cls_mobilenet_v2/ImageProcessor/: CMakeLists.txt  ImageProcessor.cpp
pj_tflite_det_mobilenetssd_v1/: Main.cpp
pj_tflite_det_mobilenetssd_v1/ImageProcessor/: ImageProcessor.cpp  ImageProcessor.h
pj_tflite_ss_deeplabv3_mnv2/: Main.cpp
pj_tflite_ss_deeplabv3_mnv2/ImageProcessor/: CMakeLists.txt  ImageProcessor.cpp  ImageProcessor.h
project_classification/: CMakeLists.txt  main.cpp  main2.cpp
project_classification_cam/: CMakeLists.txt  main.cpp
project_classification_edgetpuapi/: model_utils.cc
project_classification_tflite/: CMakeLists.txt  main.cpp
project_detection/: main.cpp
project_detection_cam/: CMakeLists.txt  main.cpp  main_opengl.cpp  memo_ubuntu_on_pi4.txt
project_detection_fast/: CMakeLists.txt  main.cpp
project_pipeline/: CMakeLists.txt  main.cpp
project_pipeline_classification/: CMakeLists.txt  main.cpp
project_pipeline_classification_cam/: main.cpp
project_pipeline_semantic_segmentation_cam/: main.cpp
project_semantic_segmentation/: CMakeLists.txt  main.cpp
project_semantic_segmentation_cam/: main.cpp
resource/: deeplabv3_mnv2_dm05_pascal_quant_segment_0_of_2_edgetpu.tflite  deeplabv3_mnv2_dm05_pascal_quant_segment_0_of_3_edgetpu.tflite  deeplabv3_mnv2_dm05_pascal_quant_segment_1_of_2_edgetpu.tflite  deeplabv3_mnv2_dm05_pascal_quant_segment_1_of_3_edgetpu.tflite  deeplabv3_mnv2_dm05_pascal_quant_segment_2_of_3_edgetpu.tflite  mobilenet_v2_1.0_224_quant_segment_0_of_3_edgetpu.tflite  mobilenet_v2_1.0_224_quant_segment_1_of_3_edgetpu.tflite  mobilenet_v2_1.0_224_quant_segment_2_of_3_edgetpu.tflite
